/*
 * test_sparse_join_perf.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2022 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.test1;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestSparseJoinPerfProto";

import "record_metadata_options.proto";

option (schema).store_record_versions = true;

message OuterRecord {
    optional int64 rec_no = 1 [(field).primary_key = true];
    optional string text = 2;
}

message InnerRecord {
    optional int64 rec_no = 1 [(field).primary_key = true];
    optional int64 group = 2;
    optional int32 val = 3;
    optional int64 outer_id = 4;
}

message SparseJoinUnion {
    option (record).usage = UNION;
    optional OuterRecord _OuterRecord = 1;
    optional InnerRecord _InnerRecord = 2;
}
